# btcli

./: .gitignore  ALL_DOCS.md  Cargo.toml  README-en.md  README.md  TODO.md  build.rs  cargo-upx.sh  config.toml  index.html  post_build.rs  softwares_btcli_index.html
.cargo/: config.toml
.github/workflows/: autosync.yml  release.yml
btcli-0.5.3-windows-x86_64-package/: LICENSE  btcli-0.5.3-windows-x86_64-source.crate
btcli-0.5.3-windows-x86_64/debug/: btcli.d  libbtcli_lib.d
btcli-0.5.3-windows-x86_64/release/: btcli.d  libbtcli_lib.d  libbtcli_lib.rlib
scripts/: build.sh
src/: cli.rs  conf.rs  expect_react.rs  extract_help.rs  fancy_egg.rs  fycore.rs  fyerrcodes.rs  lib.rs  main.rs  ui.rs
src/ui/: about.rs  help.rs  index.rs  loader.rs  lovely_items.rs  messagebox.rs  settings.rs
tests/: cli_test.rs
